--- a/index.html
+++ b/index.html
@@ -3,43 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <title>Hello React</title>
-    <style>
-        .user-info{
-            padding: 8px;
-            border: 1px #ccc solid;
-        }
-    </style>
 </head>
 <body>
-    <div id="app"> </div>
+    <div id="app"></div>
       
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-     
-   <script type="text/babel">
-    const user = {
-        id : 5,
-        age: 33,
-        firstName: 'Tom',
-        lastName: 'Smit',
-        getFullName: function(){ 
-            return `${this.firstName} ${this.lastName}`;
-        }
-    };
-    const userClassName = "user-info";
-    const styleObj = {
-        color:'red', 
-        fontFamily:'Verdana'
-    };
-    ReactDOM    
-        .createRoot(document.getElementById("app"))
-        .render(
-            <div className={userClassName}  style={styleObj}>
-                <p>Полное имя: {user.getFullName()}</p>
-                <p>Возраст: {user.age}</p>
-            </div>
-        );
-   </script>
+    <script type="text/babel" src="index.jsx"></script>
 </body>
 </html>
